<?xml version="1.0"?>
<package>
    <name>tensorrt_bcnn</name>
    <version>1.11.0</version>
    <description>tensorrt_bcnn</description>

    <maintainer email="kosuke.tnp@gmail.com">Kosuke Takeuchi</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>autoware_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>autoware_msgs</run_depend>

    <export></export>
</package>
